--- a/MarkZuckerberg.html
+++ b/MarkZuckerberg.html
@@ -5,61 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark Zuckerberg Wealth </title>
+    <link rel="stylesheet" href="MarkZuckerberg.css" />
 </head>
 <style>
-    body {
-        background-color: gray;
-        /* border: 2px solid black; */
-        display: flex;
-    }
 
-    .white {
-        position: absolute;
-        margin-top: 70vh;
-        margin-left: 0;
-        margin-right: 0;
-        height: 200px;
-        width: 100%;
-    }
-
-    .parent-child {
-        background-color: #fff;
-        position: absolute;
-        height: 70vh;
-        width: 80vw;
-        margin-top: 30vh;
-        /* justify-content: center; */
-        /* align-items: center; */
-        margin-left: 9vw;
-        /* text-shadow: 5px; */
-        /* border: 1px solid blue; */
-
-    }
-
-    div>div>div>div img {
-        position: absolute;
-        height: 45vh;
-        width: 45vh;
-        /* justify-content: center; */
-        /* align-items: center; */
-        /* margin-bottom: 100px; */
-        /* border: 1px solid black; */
-        padding-left: 26vw;
-        padding-right: 26vw;
-
-    }
-
-    .text {
-        position: absolute;
-        margin-top: 47vh;
-        text-align: center;
-        /* font-size: large; */
-        color: #000;
-        border: 1px solid black;
-        background-color: lightblue;
-        margin-left: 35vw;
-
-    }
 </style>
 
 <body>
@@ -80,11 +29,9 @@
                         <h1 style="display: inline;">$241.7B</h1>
                         <h5>real Time Net Worth <h5>
                                 <p style="font-weight: 100; padding: 10px;">as of 6/9/25</p>
-                                <p style="">#2 in the world today</p>
+                                <p style="display: inline;">#2 in the world today</p>
                                 <h5>$875M (0.36%)</h5>
                     </div>
-                    <!-- <p class="text">MARK Zuckerberg</p>     text part is left, will work on it tomorrow. -->
-
                 </div>
             </div>
         </div>
