--- a/DentalClinic.html
+++ b/DentalClinic.html
@@ -26,7 +26,7 @@
         </div>
         <div class="card2">
                     <h4>Lorem ipsum </h4>
-            <p> Dignissimos reprehenderit</p> x
+            <p> Dignissimos reprehenderit</p> 
             <p>explicabo quisquam</p> 
             <p>Officiis</p>
         </div>
