--- a/Navbar.html
+++ b/Navbar.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <ul>
-           <li>
+           <li class="active-link">
             <a href="#">Home</a>
         </li>
            <li>
@@ -21,8 +21,8 @@
            <li>
             <a href="#">Contact</a>
         </li>
-           <li>
-            <a href="#" class="active-link">Feedback</a>
+           <li >
+            <a href="#">Feedback</a>
         </li>
         </ul>
     </div>
