--- a/Navbar.html
+++ b/Navbar.html
@@ -24,6 +24,9 @@
            <li >
             <a href="#">Feedback</a>
         </li>
+        <li>
+            <img src="png-clipart-web-development-web-design-internet-web-hosting-service-world-wide-web-logo-symmetry-thumbnail.png" style="width: 50px; height: 50px;">
+        </li>
         </ul>
     </div>
 </body>
