--- a/Navbar.html
+++ b/Navbar.html
@@ -1,33 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navagitaion Bar</title>
     <link rel="stylesheet" href="Navbar.css" />
 </head>
+
 <body>
+
     <div>
         <ul>
-           <li class="active-link">
-            <a href="#">Home</a>
-        </li>
-           <li>
-            <a href="#">About</a>
-        </li>
-           <li>
-            <a href="#">Services</a>
-        </li>
-           <li>
-            <a href="#">Contact</a>
-        </li>
-           <li >
-            <a href="#">Feedback</a>
-        </li>
-        <li>
-            <img src="png-clipart-web-development-web-design-internet-web-hosting-service-world-wide-web-logo-symmetry-thumbnail.png" style="width: 50px; height: 50px;">
-        </li>
+            <li class="active-link">
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Services</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+                <ul class="Con_SubMenu">
+                    <li><input type="tel" placeholder="Number" required /></li>
+                    <li><input type="email" placeholder="Email" required /></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Feedback</a>
+            </li>
+            <li>
+                <img src="png-clipart-web-development-web-design-internet-web-hosting-service-world-wide-web-logo-symmetry-thumbnail.png"
+                    style="width: 50px; height: 50px;">
+            </li>
+
+        </ul>
+        <div class="Uni_Name">
+            <h1>Semporna University</h1>
+            <h3>Experince Education Based on<br> International Standards with <q>Us</q></h3>
+            </ul>
+        </div>
+        <ul id="Dropdown">
+            <div class="Study Field">
+                <li>
+                    <a href="">IT</a>
+                </li>
+                <li>
+                    <a href="">Business</a>
+                </li>
+                <li>
+                    <a href="">Science</a>
+                </li>
+                <li>
+                    <a href="">Management</a>
+                </li>
+                <li>
+                    <a href="">Math Profession</a>
+                </li>
+                <li>
+                    <a href="">Civil Engineer</a>
+                </li>
+            </div>
         </ul>
     </div>
+
+
 </body>
+
 </html>
