adding effect to Dropdown button

--- a/FormByCSS.html
+++ b/FormByCSS.html
@@ -12,16 +12,18 @@
     <div>
         <ul>
             <label for="firstname">First Name:</label>
-            <li><input type="text" id="firstname" name="first_name" required></li>
+            <li><input type="text" id="firstname" name="firstName" required></li>
             <label for="lastname">Last Name:</label>
-            <li><input type="text" id="lastname" name="lastname" required></li>
+            <li><input type="text" id="lastname" name="lastName" required></li>
             <ul>Select Your Ability:
-               <li> <a href="#">Pre Beginner</a></li>
+                <div style="display: none;">
+                <li><a href="#">Pre Beginner</a></li>
                 <li><a href="#">Beginner</a></li>
                 <li><a href="#">Basic</a></li>
                 <li><a href="#">Junior</a></li>
                 <li><a href="#">Sinor</a></li>
                 <li><a href="#">Master</a></li>
+                </div>
             </ul>
             <li><input type="submit" value="Submit" class="Submit" /></li>
         </ul>
