aliginning the Input Types

--- a/FormByCSS.html
+++ b/FormByCSS.html
@@ -9,12 +9,13 @@
 </head>
 
 <body>
-    <div>
+    <div class="MainContainer">
         <ul>
+            <div class="InputName">
             <label for="firstname">First Name:</label>
-            <li><input type="text" id="firstname" name="firstName" required></li>
-            <label for="lastname">Last Name:</label>
-            <li><input type="text" id="lastname" name="lastName" required></li>
+            <li><input type="text" id="firstname" name="firstName" required></li></div>
+           <div class="InputLastName"><label for="lastname">Last Name:</label>
+            <li><input type="text" id="lastname" name="lastName" required></li></div>
             <ul>Select Your Ability:
                 <div style="display: none;">
                 <li><a href="#">Pre Beginner</a></li>
