working on Dropdown Menu Form

--- a/FormByCSS.html
+++ b/FormByCSS.html
@@ -11,7 +11,7 @@
 <body>
     <div class="MainContainer">
         <ul>
-            <div class="InputName">
+            <div class="InputFirstName">
             <label for="firstname">First Name:</label>
             <li><input type="text" id="firstname" name="firstName" required></li></div>
            <div class="InputLastName"><label for="lastname">Last Name:</label>
