styling the Dropdown Menu

--- a/FormByCSS.html
+++ b/FormByCSS.html
@@ -16,15 +16,15 @@
             <li><input type="text" id="firstname" name="firstName" required></li></div>
            <div class="InputLastName"><label for="lastname">Last Name:</label>
             <li><input type="text" id="lastname" name="lastName" required></li></div>
-            <ul>Select Your Ability:
-                <div style="display: none;">
+            <ul class="Dropdown Menu">Select Your Ability:
+                <button>
                 <li><a href="#">Pre Beginner</a></li>
                 <li><a href="#">Beginner</a></li>
                 <li><a href="#">Basic</a></li>
                 <li><a href="#">Junior</a></li>
                 <li><a href="#">Sinor</a></li>
                 <li><a href="#">Master</a></li>
-                </div>
+                </button>
             </ul>
             <li><input type="submit" value="Submit" class="Submit" /></li>
         </ul>
