fulfilling the Form Project

--- a/FormByCSS.html
+++ b/FormByCSS.html
@@ -13,17 +13,18 @@
         <ul>
             <div class="InputFirstName">
             <label for="firstname">First Name:</label>
-            <li><input type="text" id="firstname" name="firstName" required></li></div>
+            <li style="list-style: none;"><input type="text" id="firstname" name="firstName" required></li></div>
            <div class="InputLastName"><label for="lastname">Last Name:</label>
-            <li><input type="text" id="lastname" name="lastName" required></li></div>
-            <ul class="Dropdown Menu">Select Your Ability:
-                <li><a href="#">Pre Beginner</a></li>
-                <li><a href="#">Beginner</a></li>
-                <li><a href="#">Basic</a></li>
-                <li><a href="#">Junior</a></li>
-                <li><a href="#">Sinor</a></li>
-                <li><a href="#">Master</a></li>
-            </ul>
+            <li style="list-style: none;"><input type="text" id="lastname" name="lastName" required></li></div>
+            <li id="Choices"><a href="#">Select Your Ability:</a></li>
+                <ul class="Dropdown Menu">
+                    <li class="DropDownMenu"><a href="#">Pre Beginner</a></li>
+                    <li class="DropDownMenu"><a href="#">Beginner</a></li>
+                    <li class="DropDownMenu"><a href="#">Basic</a></li>
+                    <li class="DropDownMenu"><a href="#">Junior</a></li>
+                    <li class="DropDownMenu"><a href="#">Sinor</a></li>
+                    <li class="DropDownMenu"><a href="#">Master</a></li>
+             </ul>
         </ul>
         <li><input type="submit" value="Submit" class="Submit" /></li>
     </div>
