adding title to Form

--- a/FormByCSS.html
+++ b/FormByCSS.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <div class="Heading">
+    <h1> University of Saint Elric</h1>
+    <h4>Please fill the inbox below for submission</h4>
+    <h4>"Innovation and Impact: Rethinking Traditional Models"</h4>
+    <h3>"The Changing Landscape of Higher Education in the 21st Century"</h3>
+    </div>
     <div class="MainContainer">
         <ul>
             <div class="InputFirstName">
