--- a/GalleryRewritingCodes.html
+++ b/GalleryRewritingCodes.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GalleryRewritingCodes</title>
+    <link rel="stylesheet" href="galleryImage.css" />
     <style>
-        .image_picture{
+         /* .image_picture{
             display: flex;
             /* flex-flow: row wrap; */
-            flex-direction:column;
+           /* flex-direction:column;
             justify-content: flex-start;
             align-items: center;
             gap: 20px;
@@ -29,27 +30,29 @@
             transform:scale(1.1);
             border: 4px solid #eed4d4;
             
-        }
+
+        }  */
+        
     </style>
 </head>
 <body>
     <div class="image_picture">
-        <img src="IMG_0976.jpeg" alt="">
-        <img src="IMG_0993.jpeg" alt="">
-        <img src="IMG_2468.JPG" alt="">
-        <img src="IMG_3270.jpeg" alt="">
-        <img src="IMG_3271.jpeg" alt="">
-        <img src="IMG_3272.jpeg" alt="">
-        <img src="IMG_3277.jpeg" alt="">
-        <img src="IMG_3284.jpeg" alt="">
-         <img src="IMG_0976.jpeg" alt="">
-        <img src="IMG_0993.jpeg" alt="">
-        <img src="IMG_2468.JPG" alt="">
-        <img src="IMG_3270.jpeg" alt="">
-        <img src="IMG_3271.jpeg" alt="">
-        <img src="IMG_3272.jpeg" alt="">
-        <img src="IMG_3277.jpeg" alt="">
-        <img src="IMG_3284.jpeg" alt="">
+        <img src="IMG_0976.jpeg" alt="image1">
+        <img src="IMG_0993.jpeg" alt="image2">
+        <img src="IMG_2468.JPG"  alt="image3">
+        <img src="IMG_3270.jpeg" alt="image4">
+        <img src="IMG_3271.jpeg" alt="image5">
+        <img src="IMG_3272.jpeg" alt="image6">
+        <img src="IMG_3277.jpeg" alt="image7">
+        <img src="IMG_3284.jpeg" alt="image8">
+        <img src="IMG_0976.jpeg" alt="image9">
+        <img src="IMG_0993.jpeg" alt="imageI">
+        <img src="IMG_2468.JPG"  alt="imageII">
+        <img src="IMG_3270.jpeg" alt="imageIII">
+        <img src="IMG_3271.jpeg" alt="imageIV">
+        <img src="IMG_3272.jpeg" alt="imageV">
+        <img src="IMG_3277.jpeg" alt="imageVI">
+        <img src="IMG_3284.jpeg" alt="imageVII">
     </div>
 </body>
 </html>
