--- a/LoaderRecoding.html
+++ b/LoaderRecoding.html
@@ -11,6 +11,18 @@
         <div class="Container">
             <div class="loader"></div>
         </div>
+        <br>
+    <h1>Dots Loader</h1>
+    <div class="MainContainer">
+        <div class="ChildContainer">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     
 </body>
 </html>
