adding three types of Loader with different Styles

--- a/LoaderRecoding.html
+++ b/LoaderRecoding.html
@@ -23,6 +23,12 @@
             <div></div>
         </div>
     </div>
-    
+    <br>
+    <h1>Three Style of CSS Loader</h1>
+   <div class="MainDiv">
+     <div class="FirstType Loader"></div>
+    <div class="SecondType Loader"></div>
+    <div class="ThirdType Loader"></div>
+   </div>
 </body>
 </html>
