adding Loader with Gradient Color

--- a/LoaderRecoding.html
+++ b/LoaderRecoding.html
@@ -12,7 +12,7 @@
             <div class="loader"></div>
         </div>
         <br>
-    <h1>Dots Loader</h1>
+    <!-- <h1>Dots Loader</h1>
     <div class="MainContainer">
         <div class="ChildContainer">
             <div></div>
@@ -23,12 +23,16 @@
             <div></div>
         </div>
     </div>
-    <br>
+    <br>            
     <h1>Three Style of CSS Loader</h1>
    <div class="MainDiv">
      <div class="FirstType Loader"></div>
     <div class="SecondType Loader"></div>
     <div class="ThirdType Loader"></div>
+   </div> -->
+   <br> <!--Gradinet Loader-->
+   <div class="MainGradientColor">
+    <div class="ChildGradientColor"></div>
    </div>
 </body>
 </html>
