Adding comment to the Loader HTML Structure

--- a/LoaderRecoding.html
+++ b/LoaderRecoding.html
@@ -6,13 +6,14 @@
     <title>LoaderTutorialsPoint</title>
     <link rel="stylesheet" href="LoaderRecoding.css" />
 </head>
-<body>
+<body> 
+                                    <!--Simple Loader HTML-->
     <h1>CSS Loader Designing</h1>
         <div class="Container">
             <div class="loader"></div>
         </div>
-        <br>
-    <!-- <h1>Dots Loader</h1>
+        <br>                        <!--Dots Loader Style HTML-->
+    <h1>Dots Loader</h1>
     <div class="MainContainer">
         <div class="ChildContainer">
             <div></div>
@@ -23,14 +24,15 @@
             <div></div>
         </div>
     </div>
-    <br>            
+    <br>                            <!--Three Styles Loader HTML-->         
     <h1>Three Style of CSS Loader</h1>
    <div class="MainDiv">
      <div class="FirstType Loader"></div>
     <div class="SecondType Loader"></div>
     <div class="ThirdType Loader"></div>
-   </div> -->
-   <br> <!--Gradinet Loader-->
+   </div>
+   <br> 
+                                            <!--Gradinet Loader HTML-->
    <div class="MainGradientColor">
     <div class="ChildGradientColor"></div>
    </div>
