final edits of Loader

--- a/LoaderRecoding.html
+++ b/LoaderRecoding.html
@@ -33,6 +33,7 @@
    </div>
    <br> 
                                             <!--Gradinet Loader HTML-->
+   <h1>Gradient Color Loader</h1>
    <div class="MainGradientColor">
     <div class="ChildGradientColor"></div>
    </div>
