--- a/BoxModel.html
+++ b/BoxModel.html
@@ -10,13 +10,20 @@
     <h1></h1>
     <h2></h2>
     <div class="BoxModel">
+                            <!--The Content-Box Model Example-->
         <div class="ContentBox">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt commodi facere ullam! Placeat labore aperiam sequi veniam aut? Quis, saepe necessitatibus recusandae esse ipsam fuga eaque praesentium minima accusantium totam?<br>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa velit voluptatem rerum voluptatum expedita quos magni placeat blanditiis minima similique, culpa distinctio, provident dolorum facere modi delectus, et unde est?
-        </div>
-        <div class="BorderBox">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam nesciunt modi, doloribus magni quia impedit vitae blanditiis tempore at, enim earum, quo ipsum voluptas iste ipsam natus quod! Quidem, nemo?<br>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis adipisci animi voluptas, aliquid voluptatibus saepe esse iste commodi quisquam. Impedit rem, quam rerum culpa quisquam dolor obcaecati cum iste tempora!
+            In this Element you will be seeing the differences between Content-box and Border-box 
+            The current Element that you are seeing is defined by "Content-Box" which the content only includes the Width and the Height, but the Padding and Border is excludeda and counted extra outside of the content. 
+            <br><br>
+            <p class="Content_Box"><b>2px (left Border) + 25px (left Padding) + Content + 25px (right Border) + 2px (right Border)</b></p>
+        </div> 
+                                    <!--Border-Box Model exmaple-->
+        <div class="BorderBox">.  
+                         
+            In this Element you will be seeing the differences between Content-box and Border-box. 
+            The current Element that you are seeing is defined by "Border-Box" which the content includes Width, Height, Padding and Border. All Values includes in content. Padding and Border are included and counted inside the content which is unlike the Content-box. The below Element is given the same value as the above element. Here you will see the differences clearly. <br><br>
+             <p class="Content_Box"><b>2px (left Border) + 25px (left Padding) + Content + 25px (right Border) + 2px (right Border)</b></p>
+            
         </div>
     </div>
 </body>
