Adding three Elements

--- a/BoxModel.html
+++ b/BoxModel.html
@@ -11,14 +11,14 @@
     <h2></h2>
     <div class="BoxModel">
                             <!--The Content-Box Model Example-->
-        <div class="ContentBox">
+        <div class="contentBox">
             In this Element you will be seeing the differences between Content-box and Border-box 
             The current Element that you are seeing is defined by "Content-Box" which the content only includes the Width and the Height, but the Padding and Border is excludeda and counted extra outside of the content. 
             <br><br>
-            <p class="Content_Box"><b>2px (left Border) + 25px (left Padding) + Content + 25px (right Border) + 2px (right Border)</b></p>
+            <p class="content_Box"><b>2px (left Border) + 25px (left Padding) + Content + 25px (right Border) + 2px (right Border)</b></p>
         </div> 
                                     <!--Border-Box Model exmaple-->
-        <div class="BorderBox">.  
+        <div class="borderBox">.  
                          
             In this Element you will be seeing the differences between Content-box and Border-box. 
             The current Element that you are seeing is defined by "Border-Box" which the content includes Width, Height, Padding and Border. All Values includes in content. Padding and Border are included and counted inside the content which is unlike the Content-box. The below Element is given the same value as the above element. Here you will see the differences clearly. <br><br>
