--- a/CSSAttrSelectors.html
+++ b/CSSAttrSelectors.html
@@ -9,15 +9,17 @@
 <body>
     <h1>CSS Visual Studio Code Shortcuts</h1>
     <div class="MainContainer">
+        <!--First Div To address Attributes by CSS ATTR Selectors-->
     <div class="First Shortcuts">
         <ul>
             <li>Auto-complete(Intellisense) Ctrl + Space </li>
-            <li>Got to Definition f12 or cms + Click</li>
+            <li>Go to Definition f12 or cms + Click</li>
             <li>Peel Definition Option + f12</li>
             <li>Go to Line Cmd + G</li>
             <li>Go to Line Cmd + P</li>
             <li>Go to File Shift + Option + F</li>
         </ul>
+        <!--Second Div To style and Give Address by Css Attr Selectors-->
         <div class="Second Shortcuts">
             <h2>Step Two Visual Studio Code CSS Shortcuts</h2>
                 <p>Rename Symbol f2</p>
@@ -26,6 +28,7 @@
                 <p>Find Next Match Cmd + D</p>
                 <p>Comment/Uncomment Line Cmd + /</p>
         </div>
+        <!--Third Div to Style and Give Address by CSS ATTR Selectors-->
         <div class="Third Shortcuts">
             <h3> SideBar/Files Management</h3>
                 <li>Toggle Sidebar Cmd + B</li>
@@ -35,7 +38,7 @@
                 <li>Switch Between Tabs Cmd + 1, Cmd + 2, etc.</li>
 
         </div>
-        <p>Let me know if you want shortcuts focused on HTML, JavaScript, or debugging in VS Code too!</p>
+        <!-- <p>Let me know if you want shortcuts focused on HTML, JavaScript, or debugging in VS Code too!</p> -->
     </div>
     </div>
 </body>
