adding divs and headings

--- a/CSSAttrSelectors.html
+++ b/CSSAttrSelectors.html
@@ -7,21 +7,22 @@
     <link rel="stylesheet" href="CSSAttrSelectors.css" />
 </head>
 <body>
-    <h1>CSS Visual Studio Code Shortcuts</h1>
     <div class="MainContainer">
         <!--First Div To address Attributes by CSS ATTR Selectors-->
+        <h1>CSS Visual Studio Code Shortcuts</h1>
     <div class="First Shortcuts">
         <ul>
-            <li>Auto-complete(Intellisense) Ctrl + Space </li>
+            <li>Auto-complete (Intellisense) Ctrl + Space </li>
             <li>Go to Definition f12 or cms + Click</li>
             <li>Peel Definition Option + f12</li>
             <li>Go to Line Cmd + G</li>
             <li>Go to Line Cmd + P</li>
             <li>Go to File Shift + Option + F</li>
         </ul>
+        </div>
         <!--Second Div To style and Give Address by Css Attr Selectors-->
+        <h3>Step Two Visual Studio Code CSS Shortcuts</h3>
         <div class="Second Shortcuts">
-            <h2>Step Two Visual Studio Code CSS Shortcuts</h2>
                 <p>Rename Symbol f2</p>
                 <p>Multi-Cursor Edit Option + Click</p>
                 <p>Select All Occurrences Cmd + Shift + L</p>
@@ -29,8 +30,8 @@
                 <p>Comment/Uncomment Line Cmd + /</p>
         </div>
         <!--Third Div to Style and Give Address by CSS ATTR Selectors-->
+        <h3 class="thirdHeading"> SideBar/Files Management</h3>
         <div class="Third Shortcuts">
-            <h3> SideBar/Files Management</h3>
                 <li>Toggle Sidebar Cmd + B</li>
                 <li>Toggle Terminal Ctrl +``(backtick)</li>
                 <li>New File Cmd + N</li>
@@ -39,7 +40,7 @@
 
         </div>
         <!-- <p>Let me know if you want shortcuts focused on HTML, JavaScript, or debugging in VS Code too!</p> -->
-    </div>
+    
     </div>
 </body>
 </html>
