Process of Landing Page

--- a/UinLandingPage.html
+++ b/UinLandingPage.html
@@ -7,8 +7,99 @@
     <link rel="stylesheet" href="UniLandingPage.css" />
 </head>
 <body>
+       <h2 id="logoHeading">Logo</h2>
     <div class="mainContainer">
-        <div class="firstDiv"></div>
+        <div class="firstDiv">
+            <img src="UniLandingPageImage/TopMainImage.jpeg" alt="TopMainImage">
+            <h1>Online University of
+In-Demand Professions</h1>
+<h2>Our Courses</h2>
+<p>DESIGN</p>
+<p>PROGRAMMING</p>
+<p>MARKETING</p>
+<p>BUSINESS</p>
+<P>Image from<a href="https://nicepage.com/landing-page/preview/online-university-studies-981647?device=desktop">Freepik</a></P>
+        </div>
+        <div class="secondDiv">
+            <h2>Top Ten most popular courses for international students</h2>
+                     <pre>Business Studies
+General Business
+Finance
+Management Studies
+Law
+Computer Science
+Economics
+Marketing
+Accounting
+Design</pre>
+            <img src="UniLandingPageImage/Gathering Image.jpeg" alt="Students'gathering picture">
+   
+<p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        </div>
+        <div class="thirdDiv">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <div class="DesDiv">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <div class="fourthDiv">
+            <h1>What Is a Life Coach?
+</h1>
+<div><img src="" alt=""></div>
+        <pre>
+            Most vegetables are naturally low in fat and calories. Click again or double click to start editing the text. Duis aute irure dolor in reprehenderit in voluptate velit.
+Vegetables are important sources of many nutrients, including potassium, dietary fiber, folate (folic acid), vitamin A, and vitamin C. Etate velit esse cillum dolore eu fugiat nulla pariatur.
+Diets rich in potassium may help to maintain healthy blood pressure. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+Diets rich in potassium may help to maintain healthy blood pressure. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </pre>
+        <p>Image from <a href="">https://nicepage.com/landing-page/preview/online-university-studies-981647?device=desktop</a>Freepik</p>
+        </div>
+        <div class="fifthDiv">
+            <img src="" alt="">
+        </div>
+        <div class="LeaderDiv">
+            <h1>Leader in Executive Education</h1>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <img src="" alt="">
+        </div>
+        <div class="sixthDiv">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <div class="circleImage">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <p>Images from <a href="#">Freepik</a></p>
+        </div>
+        <div class="seventhDiv">
+            <h1>
+Flexible Distance Learning</h1>
+<p>We provide flexible and 24/7 online learning that fits around You. Become an industry leader with accredited undergraduate and postgraduate courses online. Fully Online.</p>
+        <div class="writtenDiv">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        </div>
+        <div class="lastDiv">
+            <h1>Need Help?</h1>
+            <p>Our specialists will contact you for details and clarification. We’ll be glad to help you find the course.</p>
+            <form action="">
+                <input type="text">
+                <input type="tel">
+                <input type="submit" name="" id="">
+            </form>
+            
+        </div>
     </div>
+
 </body>
 </html>
