landing Page Process

--- a/UinLandingPage.html
+++ b/UinLandingPage.html
@@ -7,31 +7,33 @@
     <link rel="stylesheet" href="UniLandingPage.css" />
 </head>
 <body>
-       <h2 id="logoHeading">Logo</h2>
+       
     <div class="mainContainer">
+        <h2 id="logoHeading">Logo</h2>
         <div class="firstDiv">
-            <img src="UniLandingPageImage/TopMainImage.jpeg" alt="TopMainImage">
-            <h1>Online University of
-In-Demand Professions</h1>
-<h2>Our Courses</h2>
-<p>DESIGN</p>
-<p>PROGRAMMING</p>
-<p>MARKETING</p>
-<p>BUSINESS</p>
-<P>Image from<a href="https://nicepage.com/landing-page/preview/online-university-studies-981647?device=desktop">Freepik</a></P>
+            <img src="UniLandingPageImage/BackgroundLandingPageIamge.jpeg" alt="TopMainImage">
+            <h1>Online University <br> of
+                In-Demand Professions</h1>
+                <h2>Our Courses</h2>
+                <p class="Div1">DESIGN</p>
+                <p class="Div2">PROGRAMMING</p>
+                <p class="Div3">MARKETING</p>
+                <p class="Div4">BUSINESS</p> <br>
+                <P class="firstLink">Image from<a href="#">Freepik</a></P>
         </div>
         <div class="secondDiv">
             <h2>Top Ten most popular courses for international students</h2>
-                     <pre>Business Studies
-General Business
-Finance
-Management Studies
-Law
-Computer Science
-Economics
-Marketing
-Accounting
-Design</pre>
+                     <p>Business Studies<br>
+                        General Business<br>
+                        Finance<br>
+                        Management Studies<br>
+                        Law<br>
+                        Computer Science<br>
+                        Economics<br>
+                        Marketing<br>
+                        Accounting<br>
+                        Design<br>
+                     </p>
             <img src="UniLandingPageImage/Gathering Image.jpeg" alt="Students'gathering picture">
    
 <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
@@ -54,11 +56,14 @@ Design</pre>
 <div><img src="" alt=""></div>
         <pre>
             Most vegetables are naturally low in fat and calories. Click again or double click to start editing the text. Duis aute irure dolor in reprehenderit in voluptate velit.
+
 Vegetables are important sources of many nutrients, including potassium, dietary fiber, folate (folic acid), vitamin A, and vitamin C. Etate velit esse cillum dolore eu fugiat nulla pariatur.
+
 Diets rich in potassium may help to maintain healthy blood pressure. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+
 Diets rich in potassium may help to maintain healthy blood pressure. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
         </pre>
-        <p>Image from <a href="">https://nicepage.com/landing-page/preview/online-university-studies-981647?device=desktop</a>Freepik</p>
+        <p>Image from <a href=""></a>Freepik</p>
         </div>
         <div class="fifthDiv">
             <img src="" alt="">
