--- a/TestingDiv.html
+++ b/TestingDiv.html
@@ -25,7 +25,7 @@
                 <h4 class="lastLink">Image from <a href="#">Freepik</a></h4>
                 </div>
         </div>
-        <div class="secondDiv">
+        <!-- <div class="secondDiv">
             <h1>Top Ten most popular courses for international students</h1>  <p>Business Studies<br>
                 <img src="" alt="">
                         General Business<br>
@@ -39,7 +39,7 @@
                         Design<br>
                      </p>
 
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
