--- a/LastLandingPage.html
+++ b/LastLandingPage.html
@@ -181,6 +181,7 @@
             
             <div class="lastSection">
                 <div>
+                    <div>
                     <form action=""></form>
                     <h1>Need Help?</h1>
                     <p>Our specialists will contact you for details and clarification. We’ll be glad to help you find the course.</p>
@@ -198,6 +199,7 @@
                     <label for="email">Email:</label>
                     <input type="email" name="email" id="email">
                     <input type="submit" placeholder="REQUEST clarification">
+                    </div>
                     </div>
                 </form>
                 </div>
