adding Navigation Bar

--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -11,13 +11,14 @@
 
     <div class="Sections">
         <div class="Section1">
+            <span id="leftSpan">Portfolio</span>
             <nav>
-                <h2>Portoflio</h2>
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Awards</a>
                 <a href="#">Contact</a>
+                <span id="rightSpan">(+62) 88223940342</span>
             </nav>
             <p>WEB DESIGNER ----</p>
             <h1>JAWAD HAIDAIR</h1>
