adding styles to main Page

--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -20,10 +20,12 @@
                 <a href="#">Contact</a>
                 <span id="rightSpan">(+62) 88223940342</span>
             </nav>
-            <p>WEB DESIGNER ----</p>
+            <div>
+            <h4>WEB DESIGNER ----</h4>
             <h1>JAWAD HAIDAIR</h1>
             <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt eum nam recusandae, quis quam ea assumenda illum obcaecati repellat rem doloremque rerum commodi, perspiciatis quibusdam maxime soluta, tempora distinctio cumque?</P>
             <input type="button" placeholder="View Portfolio"> <br>
+            </div>
             <img src="" alt="Main page Image">
         </div>
         <div class="Section2"></div>
