--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -21,12 +21,12 @@
                 <span id="rightSpan">(+62) 88223940342</span>
             </nav>
             <div>
-            <h4>WEB DESIGNER ----</h4>
+            <h4>WEB DESIGNER ----</h4> <!--Adding a line later -->
             <h1>JAWAD HAIDAIR</h1>
             <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt eum nam recusandae, quis quam ea assumenda illum obcaecati repellat rem doloremque rerum commodi, perspiciatis quibusdam maxime soluta, tempora distinctio cumque?</P>
-            <input type="button" placeholder="View Portfolio"> <br>
+            <input type="submit" value="View Portfolio"> <br>
             </div>
-            <img src="" alt="Main page Image">
+            <img src="IMG_6604.jpeg" alt="Main page Image">
         </div>
         <div class="Section2"></div>
         <div class="Section3"></div>
