second Page Completion

--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -9,7 +9,7 @@
 <body>
     <!--5 Sections-->
 
-    <div class="Sections">
+    <div class="Sections"> <!--First Section-->
         <div class="Section1">
             <span id="leftSpan">Portfolio</span>
             <nav>
@@ -28,7 +28,19 @@
             </div>
             <img src="IMG_6604.jpeg" alt="Main page Image">
         </div>
-        <div class="Section2"></div>
+
+        <div class="Section2"> <!--Second Section-->
+            <div class="imageFirst"><img src="IMG_6595.jpeg" alt="Second Page Images"></div>
+            <div class="imageSecond"><img src="IMG_6605 2.jpeg" alt="Second Page Images"></div>
+            <div>
+                <h1>About Us ----</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, quam. Officiis sint maiores beatae quia, delectus, labore, illum quos eveniet molestiae pariatur sequi minus? Harum animi nesciunt repudiandae illo temporibus! br
+                Velit laborum porro laboriosam sequi, dolorem repellendus dolor eius! Quae deleniti alias consequuntur molestiae, facilis debitis necessitatibus repellat, accusantium inventore, totam impedit? Sit dicta similique inventore officiis. Fugiat, tenetur at! <br><br>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto vitae adipisci. Autem atque ab harum, adipisci eveniet numquam pariatur quia cupiditate reiciendis veniam quas rem, debitis aliquid alias recusandae? <br>
+                Tenetur obcaecati similique veniam libero expedita deserunt in unde exercitationem harum nobis cumque, tempora excepturi dignissimos, dolor est nisi porro sapiente! Deserunt aut quas sit nisi numquam. Magni, earum? Ex?
+            </p>
+            </div>
+        </div> 
         <div class="Section3"></div>
         <div class="Section4"></div>
         <div class="Section5"></div>
