designing third page

--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -41,7 +41,23 @@
             </p>
             </div>
         </div> 
-        <div class="Section3"></div>
+        <div class="Section3"> <!--Third 
+            Section-->
+            <h1>Portfolio</h1>
+            <div class="Selfie Image1">
+                <img src="IMG_7404.jpeg" alt="Uni_Image">
+                <h1>Jawad Haidari</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti consequatur deserunt consectetur consequuntur iste blanditiis, quam quos incidunt ratione aspernatur ut tempora cumque sapiente fuga aliquid quae voluptate libero minus.</p>
+            </div>
+            <div class="Selfie Image2">
+                <img src="IMG_8445.jpgs" alt="Selfie Image">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae iste vero, velit, ex aspernatur nesciunt ut esse tempore natus praesentium incidunt, accusantium hic. Aspernatur pariatur ipsam, doloremque deleniti voluptates eos.</p>
+                <a href="#">F</a>
+                <a href="#">IG</a>
+                <a href="#">X</a>
+                <p>Let's connect!</p>
+            </div>
+        </div>
         <div class="Section4"></div>
         <div class="Section5"></div>
     </div>
