--- a/Protifolio/Portifolio.html
+++ b/Protifolio/Portifolio.html
@@ -87,7 +87,22 @@
             </div>
             <a href="#" id="loadMore4thSec">Load More</a>
         </div>
-        <div class="Section5"></div>
+        <div class="Section5"><!--Fifth Section-->
+            <h1>Be In Touch</h1>
+            <div>
+                <input type="tel" placeholder="(+62) 0882xxxxxxxx">
+                <input type="email" placeholder="Web Design_@gmail.com">
+            </div>
+            <form action="#">
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email or Phone">
+                <input type="text" placeholder="Purposal Request">
+                <input type="text" name="Message" id="Message" placeholder="Message"><!--How to add the message box?-->
+                <p><input type="checkbox">I'm not a robot</p>
+                <input type="submit" placeholder="Send">
+                <input type="url" placeholder="Google Map">       
+            </form>
+        </div>
     </div>
 </body>
 </html>
